--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     >
-    <title>Welcome to my Tapp!</title>
+    <title>French address navigator</title>
     <link
       href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons'
       rel="stylesheet"
