Fix Vuetify version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://unpkg.com/vuetify@1.5.18/dist/vuetify.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
 
   <body>
@@ -63,7 +67,7 @@
     </div>
 
     <script src="https://unpkg.com/vue/dist/vue.min.js" defer></script>
-    <script src="https://unpkg.com/vuetify/dist/vuetify.min.js" defer></script>
+    <script src="https://unpkg.com/vuetify@1.5.18/dist/vuetify.min.js" defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
     <script src="https://unpkg.com/underscore@1.8.3" defer></script>
     <script
